src/test/deca/syntax/invalid/unterminated_comment.deca
// Description:
//    commentaire pas fini
//
// Resultats:
//    Erreur syntaxique 
//    Ligne 8 : no viable alternative at input '/'

/* ceci est un commentaire non terminé
int x = 5;
